<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="vn.edu.topica.quanlychitieu.MainActivity">


    <Spinner
        android:id="@+id/spName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imgBank"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/agribank" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_d_t_i_kho_n"
        android:textAlignment="center"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/txtMon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_vn"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnGui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/gui" />

        <ImageButton
            android:id="@+id/btnRut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/rut" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffBE80FF"
        android:text="@string/chi_ti_t_chi_ti_u"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/add" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="#ffBE80FF" />

            <ImageButton
                android:id="@+id/btnReload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/reload" />
        </LinearLayout>

        <ListView
            android:id="@+id/lvDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
