<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffBE80FF"
    android:descendantFocusability="beforeDescendants"
    tools:context="vn.edu.topica.quanlychitieu.Main_RutActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ch_n_s_ti_n"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@drawable/ic_launcher_background"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/one" android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnFive"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/five" android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@drawable/ic_launcher_background"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/two" android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnMiOne"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            app:srcCompat="@drawable/mione" android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@drawable/ic_launcher_background"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/three" android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnMiTwo"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/mitwo" android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@drawable/ic_launcher_background"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/four" android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/txtSoKhac"
            android:layout_width="242dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/s_kh_c"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:background="#ff7e51c2"
            android:text="@string/ok" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtThongTin"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnRutTien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:background="#ff7e51c2"
        android:text="@string/r_t_ti_n" />

    <TextView
        android:id="@+id/txtThongBao"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

</LinearLayout>
